# fipe

./: Makefile  README.md  asgi_brand.py  asgi_model.py  celerybeat-schedule.db  docker-compose.yml  pyproject.toml  worker.py
.docker/: app.dockerfile  worker.dockerfile
app/: __init__.py  config.py  exceptions.py
app/core/: containers.py  domain.py
app/models/: base.py
app/repository/: __init__.py  base.py  brand.py  model.py  nosql_repository.py  sql_repository.py
app/routers/: urls.py
app/routers/v1/: cars.py
app/routers/v1/views/: parallelum.py
app/schemas/: __init__.py  base.py  brand.py  model.py
app/services/: brand_consumer.py  model_consumer.py  tasks.py
app/services/fipe/: proxy.py
app/services/parallelum/: proxy.py
app/services/queue/: consumer.py  producer.py
app/services/worker/: __init__.py
app/use_cases/: car.py  car_interface.py
migrations/: env.py
tests/integration/: parallelum.py
